--- a/ansible_target/Dockerfile
+++ b/ansible_target/Dockerfile
@@ -1,10 +1,15 @@
 FROM wscherphof/oracle-linux-7
 #FROM centos:latest
 
+
 RUN  yum install -y binutils.x86_64 compat-libcap1.x86_64 gcc.x86_64 gcc-c++.x86_64 glibc.i686 glibc.x86_64 \
      glibc-devel.i686 glibc-devel.x86_64 ksh compat-libstdc++-33 libaio.i686 libaio.x86_64 libaio-devel.i686 libaio-devel.x86_64 \
      libgcc.i686 libgcc.x86_64 libstdc++.i686 libstdc++.x86_64 libstdc++-devel.i686 libstdc++-devel.x86_64 libXi.i686 libXi.x86_64 \
      libXtst.i686 libXtst.x86_64 make.x86_64 sysstat.x86_64
+
+RUN yum install -y wget
+RUN wget http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-7.noarch.rpm
+RUN rpm -ivh epel-release-7-7.noarch.rpm
 
 # Install up-to-date epel rpm repository
 #RUN yum -y install http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
