--- a/ansible_target/Dockerfile
+++ b/ansible_target/Dockerfile
@@ -1,6 +1,6 @@
 FROM wscherphof/oracle-linux-7
 #FROM centos:latest
-
+ENV container=docker
 
 RUN  yum install -y binutils.x86_64 compat-libcap1.x86_64 gcc.x86_64 gcc-c++.x86_64 glibc.i686 glibc.x86_64 \
      glibc-devel.i686 glibc-devel.x86_64 ksh compat-libstdc++-33 libaio.i686 libaio.x86_64 libaio-devel.i686 libaio-devel.x86_64 \
