--- a/backoffice/install.yml
+++ b/backoffice/install.yml
@@ -4,13 +4,12 @@
   become: yes
   become_user: root
   vars_files:
-     - vars/backoffice.yml
+     - vars/oracle-weblogic.yml
      - vars/secrets.yml
   roles:
-     - role: drgeb.storedb
      - role: williamyeh.oracle-java
        java_provider: "oracle"
        java_version: 7
        java_subversion: 80
        java_download_from_oracle: false  
-     - role: drgeb.backoffice
+
